# rust-hc-crud-ceps

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
docs/: Holochain_Version_Map.md
src/: entities.rs  errors.rs  lib.rs  types.rs  utils.rs
tests/: package-lock.json  package.json
tests/dnas/happy_path/: dna.yaml
tests/integration/: setup.js  test_basic.js
tests/zomes/happy_path/: Cargo.toml
tests/zomes/happy_path/src/: lib.rs
